# hermes-voice

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hermes_voice/: cli.py  config.py  doctor.py  enable.py  launcher.py  models.py  report.py  utils.py  verify.py
tests/: test_cli.py  test_config.py  test_doctor.py  test_enable.py  test_launcher.py  test_verify.py
